--- a/src/components/views/OtherSkills/_styles.scss
+++ b/src/components/views/OtherSkills/_styles.scss
@@ -1,6 +1,5 @@
 .otherSkills__mac {
-	z-index : 2;
-
+	z-index  : 6;
 	position : relative;
 	top      : 80vh;
 	left     : 60%;
@@ -104,11 +103,11 @@
 			rgba(#0727af, 0.3),
 			rgba($white, 0.2)
 			);
-		height                : 100vh;
-		width                 : 100vw;
-		overflow-y             : scroll;
-		padding               : 10px 0 30px;
-		cursor                : default;
+		height     : 100vh;
+		width      : 100vw;
+		overflow-y : scroll;
+		padding    : 10px 0 30px;
+		cursor     : default;
 
 		@media all and (min-width: 768px) {
 			grid-template-columns : 1fr 3fr;
@@ -121,10 +120,9 @@
 		}
 
 		& .seabed__click2close-otherSkills {
-			position : fixed;
-			top      : 30px;
-			right    : 10px;
-			display  : block;
+			top     : 30px;
+			right   : 10px;
+			display : block;
 
 			@media all and (min-width: 768px) {
 				top   : 100px;
@@ -167,8 +165,8 @@
 		rgba($green-bright, 0.1),
 		rgba($white, 0.2)
 		);
-	width            : 100%;
-	padding          : 10px 15px 30px;
+	width   : 100%;
+	padding : 10px 15px 30px;
 }
 
 .otherSkills__outer--languages {
@@ -292,11 +290,15 @@
 .languages--flag {
 	position      : absolute;
 	top           : 60px;
-	left          : -35px;
+	left          : -28px;
 	border        : 1px solid $green-pale;
 	border-radius : 50%;
 	background    : rgba($white, 1);
 	padding       : 5px;
+
+			@media all and (min-width: 768px) {
+	left : -35px;
+		}
 }
 
 .icon--languages {
@@ -307,7 +309,7 @@
 
 .otherSkills__outer--other {
 	display         : flex;
-	flex-direction   : column;
+	flex-direction  : column;
 	justify-content : flex-start;
 	align-items     : center;
 	margin-bottom   : 30px;
